--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,23 +1,31 @@
-name: Android Build
+name: Android Release Build
 
-on: pull_request
+on: workflow_dispatch
 
 jobs:
   build:
-
-    runs-on: ubunto-latest
-
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Set Up JDK
-        uses: actions/setup-java@v1
-
+      - name: Decode Keystore
+        id: decode_keystore
+        uses: timheuer/base64-to-file@v1
         with:
-            java-version: 1.8
-
-      - name: Run tests
-        run: ./gradlew test
-
-      - name: Build Project
-        run: ./gradlew assemble
+          fileName: 'keystore/keystore'
+          encodedString: ${{ secrets.KEYSTORE }}
+      - uses: actions/checkout@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: build prod
+        run: ./gradlew app:bundleRelease
+        env:
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: Build Artifacts
+          path: app/build/outputs/
