--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -4,28 +4,22 @@ on: workflow_dispatch
 
 jobs:
   build:
+    name: Generate APK
     runs-on: ubuntu-latest
     steps:
-      - name: Decode Keystore
-        id: decode_keystore
-        uses: timheuer/base64-to-file@v1
-        with:
-          fileName: 'keystore/keystore'
-          encodedString: ${{ secrets.KEYSTORE }}
-      - uses: actions/checkout@v2
+      - name: Checkout the code
+        uses: actions/checkout@v2
+
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-      - name: build prod
-        run: ./gradlew app:bundleRelease
-        env:
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-          STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
-      - name: Upload
+
+      - name: Build debug APK
+        run: ./gradlew assembleDebug --stacktrace
+
+      - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: Build Artifacts
-          path: app/build/outputs/
+          name: expense-manager.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
