--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: 1.8
 
       - name: Build debug APK
-        run: chmod +x ./gradlew --stacktrace
+        run: chmod +x ./gradlew 
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
