--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -28,7 +28,7 @@ jobs:
         id: decode_keystore
         uses: timheuer/base64-to-file@v1.2
         with:
-          fileName: 'android_keystore.jks'
+          fileName: 'keystore'
           fileDir: '\githubactionsdemo\app\keystore'
           encodedString: ${{ secrets.KEYSTORE }}
 
