--- a/local.properties
+++ b/local.properties
@@ -8,6 +8,6 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=C\:\\Users\\Dell\\AppData\\Local\\Android\\Sdk
-KEY_STORE_PATH=D\:\\keystore
+KEY_STORE_PATH=D\:\\keys\\Keystores\\launcher_keystore\\keystore
 KEY_STORE_=techless
 KEY_STORE_PASSWORD=techle$$
