--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,9 @@ buildscript {
 
 apply plugin:'com.android.application'
 
-
+def keystorePropertiesFile = rootProject.file("local.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 android {
     namespace 'com.example.github_actions_demo'
     compileSdk 33
@@ -27,25 +29,22 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
     signingConfigs {
         release {
-            storeFile = file("D\\:\\\\keystore")
-            storePassword System.getenv("SIGNING_STORE_PASSWORD")
-            keyAlias System.getenv("SIGNING_KEY_ALIAS")
-            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
+            storeFile file(properties.getProperty("KEY_STORE_PATH"))
+            storePassword properties.getProperty("KEY_STORE_PASSWORD")
+            keyAlias properties.getProperty("KEY_STORE_ALIAS")
+            keyPassword properties.getProperty("KEY_STORE_PASSWORD")
         }
     }
 
     buildTypes {
-        // ...
         release {
-            // ...
-            applicationVariants.all { variant ->
-                variant.outputs.all {
-                    outputFileName = "${rootProject.name}_${versionName}.apk"
-                }
-            }
-            signingConfig signingConfigs.release
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
