--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,72 +1,25 @@
-name: Android CI
+name: Android Release Build
 
-on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Application version'
-        required: true
-        default: '1.0'
+on: workflow_dispatch
+
 jobs:
   build:
-    name: Build Signed APK
+    name: Generate APK
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Checkout the code
+        uses: actions/checkout@v2
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: gradle
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+          java-version: 1.8
 
-      # Here we need to decode keystore.jks from base64 string and place it
-      # in the folder specified in the release signing configuration
-      - name: Decode Keystore
-        id: decode_keystore
-        uses: timheuer/base64-to-file@v1.2
-        with:
-          fileName: 'keystore'
-          fileDir: '\githubactionsdemo\app\keystore'
-          encodedString: ${{ secrets.KEYSTORE }}
+      - name: Build debug APK
+        run: chmod +x ./gradlew 
 
-      # Build and sign APK ("-x test" argument is used to skip tests)
-      - name: Build APK
-        run: ./gradlew :app:assembleRelease -x test
-        env:
-          SIGNING_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-          SIGNING_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
-
-      # Show information about the APK's signing certificates
-      - name: Verify Signature
-        run: $ANDROID_SDK_ROOT/build-tools/33.0.1/apksigner verify --print-certs app/build/outputs/apk/release/<<application name>>_${{ github.event.inputs.version }}.apk
-
-      # Save the APK after the Build job is complete to publish it as a Github release in the next job
       - name: Upload APK
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v2
         with:
-          name: <<application name>>
-          path: app/build/outputs/apk/release/<<application name>>_${{ github.event.inputs.version }}.apk
-  release:
-    name: Release APK
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download APK from build
-        uses: actions/download-artifact@v1
-        with:
-          name: <<application name>>
-      - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ github.event.inputs.version }}
-          name: Release v${{ github.event.inputs.version }}
-          draft: false
-          prerelease: false
-          files: <<application name>>/<<application name>>_${{ github.event.inputs.version }}.apk
+          name: expense-manager.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
