--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -7,19 +7,20 @@ jobs:
     name: Generate APK
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
-
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Build debug APK
-        run: chmod +x ./gradlew 
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v2
-        with:
-          name: expense-manager.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+       - uses: r0adkll/sign-android-release@v1
+         name: Sign app APK
+         id: sign_app
+         
+         with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+         env:
+          BUILD_TOOLS_VERSION: "30.0.2"
+          
+       - uses: actions/upload-artifact@v2
+         with:
+            name: Signed app bundle
+            path: ${{steps.sign_app.outputs.signedReleaseFile}}
