--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -12,7 +12,7 @@ jobs:
          id: sign_app
          
          with:
-          releaseDirectory: app/build/outputs/apk/debug
+          releaseDirectory: app/build/outputs/apk/debug/app-debug.apk
           signingKeyBase64: ${{ secrets.KEYSTORE }}
           alias: ${{ secrets.KEY_ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
