--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -65,3 +65,12 @@ jobs:
         with:
           name: expense-manager.apk
           path: app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Upload S3
+        uses: shallwefootball/s3-upload-action@master
+        id: s3
+        with:
+            aws_key_id: ${{ secrets.AWS_KEY_ID }}
+            aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+            aws_bucket: ${{ secrets.AWS_BUCKET }}
+            source_dir: 'static'
