--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Make artifact
         uses: actions/upload-artifact@v2
         with:
-          name: '${{ steps.get_version.outputs.versionName }}-${{ steps.get_version.outputs.nextVersionCode }}-signed'
+          name: '${{ env.app_name }}-${{ env.version_code }}-signed'
           path: ${{steps.sign_aab.outputs.signedReleaseFile}}
 
 
@@ -71,7 +71,7 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: '${{ steps.get_version.outputs.versionName }}-${{ steps.get_version.outputs.nextVersionCode }}'
+          name: '${{ env.app_name }}-${{ env.version_code }}'
           path: app/build/outputs/apk/debug/app-debug.apk
 
       - name: Upload S3
