--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,9 @@ android {
         applicationId "com.example.github_actions_demo"
         minSdk 24
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
+        applicationId "demo"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -33,21 +34,38 @@ android {
 
     buildTypes {
         release {
+            debuggable true
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+
+            dimension "default"
+        }
+
+        stage {
+
+            dimension "default"
+        }
+
+        prod {
+
+            dimension "default"
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    ext {
-        version_code = '5.0.3.RELEASE'
-        app_name="Demo"
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "app-${variant.productFlavors[0].name}-${variant.buildType.name}-${variant.versionName}.apk"
+        }
     }
-    task printVersionName {
-        println android.defaultConfig.versionName
-    }
+
 }
 
 dependencies {
