--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,11 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.github_actions_demo"
+        applicationId "github_actions_demo"
         minSdk 24
         targetSdk 33
         versionCode 2
         versionName "2.0"
-        applicationId "demo"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
