WIP: introduced a variable in build.gradle and android_build.yml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
     namespace 'com.example.github_actions_demo'
     compileSdk 33
 
+    def app_name='github_actions'
+
     defaultConfig {
         applicationId "com.example.github_actions_demo"
         minSdk 24
