--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Get app name
         run: |
           # Extract version number from branch name
-          version_name=$(grep "app_name" app/build.gradle | tr -d '\n')
+          version_name=$(grep app/build.gradle | tr -d '\n')
 
           # Get existing version code from build.gradle
           version_code=$(grep "versionCode" app/build.gradle | awk '{print $2}' | tr -d '\n')
@@ -46,6 +46,10 @@ jobs:
           name:  '${{ env.VERSION_NAME }}-${{ env.VERSION_CODE }}'
           path: app/build/outputs/apk/release/
 
+      - uses: actions/download-artifact@v3
+        with:
+          path: app/build/outputs/apk/release/
+
 
       - name: Upload S3
         uses: shallwefootball/s3-upload-action@master
@@ -54,4 +58,4 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: app/build/outputs/apk/release/'${{ env.VERSION_NAME }}-${{ env.VERSION_CODE }}'.apk
+          source_dir: app/build/outputs/apk/release/
