--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -48,6 +48,7 @@ jobs:
 
       - uses: actions/download-artifact@v3
         with:
+          name: '${{ env.VERSION_NAME }}-${{ env.VERSION_CODE }}'
           path: app/build/outputs/apk/release/
 
 
