--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,6 @@ android {
     namespace 'com.example.github_actions_demo'
     compileSdk 33
 
-    def app_name='github_actions'
 
     defaultConfig {
         applicationId "com.example.github_actions_demo"
@@ -26,22 +25,26 @@ android {
         targetSdk 33
         versionCode 2
         versionName "2.0"
-
+        setProperty("archivesBaseName", applicationId + "-v" + versionCode + "(" + versionName + ")")
+        //or so
+        archivesBaseName = "$applicationId-v$versionCode($versionName)"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
 
     buildTypes {
-        debug{
+        debug {
             debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+          
         }
 
         release {
             debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
         }
 
     }
@@ -50,8 +53,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
 }
+
+
 
 dependencies {
 
