--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -59,4 +59,4 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: app/build/outputs/apk/release/${{ env.VERSION_NAME }}- ${{ env.VERSION_CODE }}-release-unsigned-signed.apk
+          source_dir: app/build/outputs/apk/release/${{ env.VERSION_NAME }}- ${{ env.VERSION_CODE }}
