--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,23 +27,23 @@ android {
         versionName "2.0"
         setProperty("archivesBaseName", applicationId + "-v" + versionCode + "(" + versionName + ")")
         //or so
-        archivesBaseName = "$applicationId-v$versionCode($versionName)"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
 
     buildTypes {
-        debug {
-            debuggable true
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-          
-        }
+
 
         release {
             debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "${rootProject.name}_${versionName}.apk"
+                }
+            }
 
         }
 
