--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -7,9 +7,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Get Tag
-        id: var
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Get app name
         run: |
