WIP:  android_build.yml

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -58,7 +58,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: <<application name>>
-          path: app/build/outputs/apk/release/${{ env.repository_name }}_${{ github.event.inputs.version }}.apk
+          path: app/build/outputs/apk/release/<<application name>>_${{ github.event.inputs.version }}.apk
 
       - name: Upload S3
         uses: shallwefootball/s3-upload-action@master
@@ -67,4 +67,4 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: app/build/outputs/apk/release/${{ env.repository_name }}_${{ github.event.inputs.version }}.apk
+          source_dir: app/build/outputs/apk/release/<<application name>>_${{ github.event.inputs.version }}.apk
