--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -57,8 +57,7 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
-          name: <<application name>>
-          path: app/build/outputs/apk/release/<<application name>>_${{ github.event.inputs.version }}.apk
+          path: app/build/outputs/apk/release/
 
       - name: Upload S3
         uses: shallwefootball/s3-upload-action@master
@@ -67,4 +66,4 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: app/build/outputs/apk/release/<<application name>>_${{ github.event.inputs.version }}.apk
+          source_dir: app/build/outputs/apk/release/
