WIP:  android_build.yml

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -54,9 +54,13 @@ jobs:
           SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           SIGNING_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
 
+      - name: Verify Signature
+        run: $ANDROID_SDK_ROOT/build-tools/33.0.1/apksigner verify --print-certs app/build/outputs/apk/release/
+
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
+          name: release.zip
           path: app/build/outputs/apk/release/
 
       - name: Upload S3
