--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -69,3 +69,4 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
           source_dir: app/build/outputs/apk/release/
+          destination_dir: ''
