--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -55,6 +55,13 @@ jobs:
           SIGNING_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
 
 
+      - name: Sign APk
+        run: |
+          echo ${{ secrets.PKCS8_KEY }} | base64 -d > platform.pk8
+          jarsigner -verbose -keystore platform.pk8 -storetype pkcs8 -storepass ${{ secrets.KEY_STORE_PASSWORD }}
+          -keypass ${{ secrets.KEY_PASSWORD }} -sigalg SHA256withRSA -digestalg
+          SHA-256 app/build/outputs/apk/release/ platform
+
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
