--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -58,9 +58,9 @@ jobs:
       - name: Sign APk
         run: |
           echo ${{ secrets.PKCS8_KEY }} | base64 -d > platform.pk8
-          jarsigner -verbose -keystore platform.pk8 -storetype pkcs8 -storepass ${{ secrets.KEY_STORE_PASSWORD }}
-          -keypass ${{ secrets.KEY_PASSWORD }} -sigalg SHA256withRSA -digestalg
-          SHA-256 app/build/outputs/apk/release/ platform
+          echo ${{ secrets.PKCS8_CERT }} | base64 -d > platform.x509.pem
+          apksigner sign --key platform.pk8 --cert platform.x509.pem app/build/outputs/apk/release/
+
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
