--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -55,12 +55,15 @@ jobs:
           SIGNING_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
 
 
-      - name: Sign APk
-        run: |
-          echo ${{ secrets.PKCS8_KEY }} | base64 -d > platform.pk8
-          echo ${{ secrets.PKCS8_CERT }} | base64 -d > platform.x509.pem
-          jarsigner -verbose -keystore platform.pk8 -storetype pkcs8 -storepassv${{ secrets.KEY_STORE_PASSWORD }} -keypass ${{ secrets.KEY_PASSWORD }} -signedjar app/build/outputs/apk/release/ app/build/outputs/apk/release/ platform.x509.pem
-
+      - name: Sign APK
+        id: sign_apk
+        uses: r0adkll/sign-android-release@v1
+        with:
+            releaseDirectory: app/build/outputs/apk/release
+            signingKeyBase64: ${{ secrets.PKCS8_KEY }}
+            alias: ${{ secrets.KEY_ALIAS }}
+            keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+            keyPassword: ${{ secrets.KEY_PASSWORD }}
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
