--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -47,7 +47,7 @@ jobs:
         uses: r0adkll/sign-android-release@v1
         with:
             releaseDirectory: app/build/outputs/apk/release
-            signingKeyBase64: ${{ secrets.PKCS8_KEY }}
+            signingKeyBase64: ${{ secrets.TEST_KEYSTORE }}
             alias: ${{ secrets.KEY_ALIAS }}
             keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
             keyPassword: ${{ secrets.KEY_PASSWORD }}
