--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,7 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
@@ -33,6 +38,14 @@ jobs:
           echo "VERSION_NAME=$version_name" >> $GITHUB_ENV
           echo "VERSION_CODE=$version_code" >> $GITHUB_ENV
 
+
+      - name: Decode Keystore
+        id: decode_keystore
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: 'android_keystore.jks'
+          fileDir: '/home/runner/work/<<project name>>/<<project name>>/app/keystore/'
+          encodedString: ${{ secrets.KEYSTORE }}
       - name: Build APK
         id: build
         run: bash ./gradlew assembleRelease -x test
@@ -41,17 +54,6 @@ jobs:
           SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           SIGNING_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
 
-      - name: Sign APK
-        run: |
-            wget https://github.com/appium/sign/archive/refs/heads/master.zip
-            unzip master.zip
-            cd sign-master
-            
-            cp github-actions-demo_2.0.apk ./
-            cp app/src/platform.x509.pem ./
-            cp app/src/platform.pk8 ./
-            
-            ./signapk.sh platform.x509.pem platform.pk8 github-actions-demo_2.0.apk  github-actions-demo_2.0_signed.apk
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
