--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -51,6 +51,7 @@ jobs:
         id: build
         run: bash ./gradlew assembleRelease -x test
         env:
+          SIGNING_KEY_STORE_PATH: ${{ secrets.SIGNING_KEY_STORE_PATH }}
           SIGNING_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           SIGNING_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
