--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Decode Keystore
         env:
-            ENCODED_STRING: ${{ secrets.SIGNING_KEY_STORE_BASE64 }}
+            ENCODED_STRING: ${{ secrets.TEST_KEYSTORE }}
             SIGNING_KEY_STORE_PATH: ${{ secrets.SIGNING_KEY_STORE_PATH }}
 
         run: |
