--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -13,10 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
           java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
 
       - name: Build APK
         run: ./gradlew assembleRelease
