buiild tools changed

--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Download and Set up Android SDK
         uses: android-actions/setup-android@v2
         with:
-            sdk-platform: '34'
+            sdk-platform: '30'
+            build-tools: '29.0.3''
 
       - name: Decode Keystore
         run: |
@@ -38,7 +39,7 @@ jobs:
       - name: Sign APK
         run: |
             # Assuming your .pk8 and .pem files are in the root directory
-              ./android-sdk/build-tools/34.0.3/apksigner sign --ks keystore.jks \
+                ~/android-sdk/build-tools/29.0.3/apksigner sign --ks keystore.jks \
                           --ks-key-alias ${{ secrets.KEY_ALIAS }} \
                           --ks-pass pass:${{ secrets.KEY_PASSWORD }} \
                           --key-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
