--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -30,7 +30,6 @@ jobs:
         uses: android-actions/setup-android@v2
         with:
             sdk-platform: '30'
-            build-tools: '30.0.0'
 
       - name: Decode Keystore
         run: |
@@ -39,7 +38,7 @@ jobs:
       - name: Sign APK
         run: |
             # Assuming your .pk8 and .pem files are in the root directory
-                ~/android/sdk/30.0.0/apksigner sign --ks keystore.jks \
+                ~/usr/local/lib/sdk/30.0.3/apksigner sign --ks keystore.jks \
                           --ks-key-alias ${{ secrets.KEY_ALIAS }} \
                           --ks-pass pass:${{ secrets.KEY_PASSWORD }} \
                           --key-pass pass:${{ secrets.KEY_STORE_PASSWORD }} \
