--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -10,15 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 11
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: gradle
+          java-version: 1.8
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
