--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,22 +32,30 @@ android {
 
     signingConfigs {
         release {
-
-
-            storeType 'pk8'
-            keyAlias 'techless'
-            storeFile file('/home/abubakar-admin/Keystores/keys/Signing keys/platform.pk8')
-            keyPassword 'techle$$'
-            keyStorePassword 'techle$$'
+            storeFile file("keystore.jks")
+            storePassword System.getenv("KEY_STORE_PASSWORD")
+            keyAlias System.getenv("KEY_ALIAS")
+            keyPassword System.getenv("KEY_PASSWORD")
         }
     }
 
+
     buildTypes {
+
+
+
         release {
-            signingConfig signingConfigs.release
-            // other release configurations...
+            debuggable true
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "${rootProject.name}_${versionName}.apk"
+                }
+            }
+
         }
-        // other build types...
+
     }
 
 
